--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@testing-library/react-native": "^9.1.0",
     "@types/jest": "^27.5.1",
     "@types/react": "~17.0.21",
-    "@types/react-native": "~0.67.6",
+    "@types/react-native": "^0.70.6",
     "@types/styled-components": "^5.1.25",
     "@types/styled-components-react-native": "^5.1.3",
     "jest": "^26.6.3",
